# splflix

./: README.md
SPLflix/: CMakeLists.txt  makefile
SPLflix/include/: Action.h  Json.hpp  Session.h  User.h  Watchable.h
SPLflix/src/: Action.cpp  ChangeActiveUser.cpp  CreateUser.cpp  DeleteUser.cpp  DuplicateUser.cpp  Episode.cpp  Exit.cpp  GenreRecommenderUser.cpp  LengthRecommenderUser.cpp  Movie.cpp  PrintActionsLog.cpp  PrintContentList.cpp  PrintWatchHistory.cpp  RerunRecommenderUser.cpp  Session.cpp  User.cpp  Watch.cpp  Watchable.cpp  main.cpp
